--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,18 @@
         <!-- Feedback Activity -->
         <activity android:name=".Feedback" />
 
+        <!-- Meal Planning Activity -->
+        <activity android:name=".MealPlanning" />
+
+        <!-- Travel Itinerary Activity -->
+        <activity android:name=".TravelItinerary" />
+
+        <!-- Travel Results Activity -->
+        <activity android:name=".TravelResults" />
+
+        <!-- Meal Results Activity -->
+        <activity android:name=".MealResults" />
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
